# monet

./: .gitignore  CMakeLists.txt  README.md  bake_assets.bat  todo.txt
asset/: bake_assets.bat
asset-baker/: CMakeLists.txt  asset_baker.cpp  asset_main.cpp
asset/asset-baker/: CMakeLists.txt  asset_baker.cpp
asset/assetlib/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  compression.cpp  compression.h  mesh_asset.cpp  mesh_asset.h  texture_asset.cpp  texture_asset.h  vk_mesh.cpp  vk_mesh.h  vk_mesh_asset.cpp  vk_mesh_asset.h
assetlib/: asset_loader.cpp  asset_loader.h  material_asset.cpp  mesh_asset.cpp  mesh_asset.h  prefab_asset.cpp  texture_asset.cpp  texture_asset.h
assets/: load_meshes.txt  penguin.mtl
assets/audio/: rode_mic.m4a
assets/hdri/: info.txt
assets/mesh/: GothicBed_01.blend  _load_meshes.txt
assets/models/bed/: GothicBed_01.mtl
assets/models/cube/: cube.blend
assets/models/plane/: rocky_plane.mtl
assets/texture/: _load_textures.txt
libs/Debug_old/: CMP_Core.lib  EtcLib.lib  bc6h.lib  bc7.lib  cubemaptest.exp  cubemaptest.lib  imperativeapi.exp  imperativeapi.lib  nvcompress.exp  nvcompress.lib  nvcore.lib  nvimage.lib  nvmath.lib  nvsquish.lib  nvtestsuite.exp  nvtestsuite.lib  nvthread.lib  nvtt.lib  posh.lib  process_alpha_map.exp  process_alpha_map.lib  rg_etc1.lib  squishd.lib
shaders/: BRDF_integration_map.frag.spv  _load_materials.txt  colored_triangle.frag  colored_triangle.vert  colored_triangle.vert.spv  cubemap.frag  cubemap.frag.spv  cubemap.vert  cubemap.vert.spv  cubemap_to_irradiance.frag  cubemap_to_irradiance.frag.spv  cubemap_to_irradiance.vert  cubemap_to_irradiance.vert.spv  default_lit.frag  default_lit.frag.spv  depth.vert  depth.vert.spv  equirect_to_cubemap.frag  equirect_to_cubemap.frag.spv  equirect_to_cubemap.vert  equirect_to_cubemap.vert.spv  equirectangular.frag  equirectangular.frag.spv  equirectangular.vert  equirectangular.vert.spv  green.frag  green.frag.spv  integrate_brdf.frag  integrate_brdf.frag.spv  load_materials.txt  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbr_double.frag  pbr_double.frag.spv  pbr_double.vert  pbr_double.vert.spv  prefilter_environment.frag  prefilter_environment.frag.spv  (+11 more)
src/: CMakeLists.txt  application.h  asset_loader.cpp  asset_loader.h  engine_util.cpp  engine_util.h  hdri.cpp  hdri.h  main.cpp  physics.cpp  physics.h  render_to_texture.cpp  render_to_texture.h  test_app.cpp  test_app.h  util.cpp  util.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_textures.h  vk_types.h
traces/: unpack_texture_takes_long.tracy
